--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                 </div>
                 <div>
                     <ul class="navbar-nav ml-auto align-vertically">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger text-center text-xs basket" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i><br><span class=" text-xs">£0.00</span></a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger text-center text-xs-nav basket" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i><br><span class=" text-xs-nav">£0.00</span></a></li>
                     </ul>
                 </div>
                 <div class="mr-auto">
