--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -77,42 +77,50 @@
 {% endblock %}
 
 {% block postloadjs %}
-    <script>
-    function setCookie(cname,cvalue,exdays) {
-        var d = new Date();
-        d.setTime(d.getTime() + (exdays*24*60*60*1000));
-        var expires = "expires=" + d.toGMTString();
-        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-    }
-
-    function getCookie(cname) {
-        var name = cname + "=";
-        var decodedCookie = decodeURIComponent(document.cookie);
-        var ca = decodedCookie.split(';');
-        for(var i = 0; i < ca.length; i++) {
-            var c = ca[i];
-            while (c.charAt(0) == ' ') {
-            c = c.substring(1);
-            }
-            if (c.indexOf(name) == 0) {
-            return c.substring(name.length, c.length);
-            }
+    <script> // Credit: https://www.w3schools.com/js/js_cookies.asp
+        function setCookie(cname,cvalue,exdays) {
+            var d = new Date();
+            d.setTime(d.getTime() + (exdays*24*60*60*1000));
+            var expires = "expires=" + d.toGMTString();
+            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
         }
-        return "";
-    }
 
-    function createCookie() {
-        var cookieValue = (Math.random()*100000000.toFixed(8);
-        setCookie("bartb%031k52t09x4isk#", cookieValue, 365);
+        function getCookie(cname) {
+            var name = cname + "=";
+            var ca = document.cookie.split(';');
+            for(var i = 0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) == ' ') {
+                    c = c.substring(1);
+                }
+                if (c.indexOf(name) == 0) {
+                    return c.substring(name.length, c.length);
+                }
+            }
+            return "";
+        }
+
+        function createCookie() {
+            var existing = getCookie("bartb%031k52t09x4isk#");
+            if (existing != "" && existing != null) {
+                return
+            } else {
+                var cookieValue = (Math.random()*100000000).toFixed(0);
+                setCookie("bartb%031k52t09x4isk#", cookieValue, 365);
+            }
         }
     </script>
 
     <script type="text/javascript">
 
         var servingPrice = document.getElementById("serving-price").innerHTML.substring(1);
-        var servings = document.getElementById("servings").innerHTML;
-        var discount = 1 - ((servings * 2) / 100);
-        var totalPrice = (servingPrice * servings * discount).toFixed(2)
+        var multiplier = document.getElementById("servings").innerHTML;
+        if (multiplier == 1) {
+            var discount = 1
+        } else {
+            var discount = 1 - ((multiplier * 2) / 100);
+        }
+        var totalPrice = (servingPrice * multiplier * discount).toFixed(2)
 
         $('#total-price').text("£" + totalPrice);
 
