Fix: moved basket cookie to %block preloadjs% on index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,9 @@
     {% block extra_js %}
     {% endblock %}
 
+    {% block preloadjs %}
+    {% endblock %}
+
     <title>Build-a-Buffet{% block extra_title %}{% endblock %}</title>
   </head>
   <body id="page-top">
