Build: adding basket.html population from Basket model

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -65,45 +65,45 @@
                         <div class="d-flex h-100">
                             <div class="product-container w-100 mt-0 text-center text-xl-left">
                                 <div class="product-text-three mx-auto flex-margin-b text-blue">The items below have been added to your basket...</div>
-                                {% for product in products %}
-                                    <div class="product-text-two mx-auto mb-2 text-blue bold">{{ category.title }}: {{ product.name }}</div>
-                                    <div class="product-text-three mx-auto mb-2 text-blue">{{ product.description }}</div>
-                                {% endfor %}
-                                <div class="text-blue text-xs mb-2">With this option ...</div>
-                                {% if selected == "selected-one" %}
-                                    {% for option in options %}
-                                        <div class="text-blue product-text-two mb-2 bold">{{ option.option1.title }}</div>
+                                    {% for basket in baskets %}
+                                        <div class="product-text-two mx-auto mb-2 text-blue bold">{{ basket.category.title }}: {{ basket.name }}</div>
+                                        <div class="product-text-three mx-auto mb-2 text-blue">'description here'</div>
+                                        <div class="text-blue text-xs mb-2">With this option ...</div>
+                                        {% if basket.selected == "selected-one" %}
+                                            {% for option in options %}
+                                                <div class="text-blue product-text-two mb-2 bold">{{ option.option1.title }}</div>
+                                            {% endfor %}
+                                        {% endif %}
+                                        {% if basket.selected == "selected-two" %}
+                                            {% for option in options %}
+                                                <div class="text-blue product-text-two mb-2">{{ option.option2.title }}</div>
+                                            {% endfor %}
+                                        {% endif %}
+                                        {% if basket.selected == "selected-three" %}
+                                            {% for option in options %}
+                                                <div class="text-blue product-text-two mb-2">{{ option.option3.title }}</div>
+                                            {% endfor %}
+                                        {% endif %}
+                                        <div class="text-blue text-xs mb-2">Number of servings ...</div>
+                                        <div id="servings" class="text-blue product-text-two mb-2 bold">{{ servings }}</div>
+                                        <div class="row">
+                                            <div class="col-4 my-auto">
+                                                {% for product in products %}
+                                                    <div class="text-blue text-xs">per serving</div>
+                                                    <div id="serving-price" class="product-text-two mt-1">£{{ product.price }}</div>
+                                                {% endfor %}
+                                            </div>
+                                            <div class="col-4 my-auto">
+                                                {% for product in products %}
+                                                    <div class="text-blue text-xs">Total price</div>
+                                                    <div id="total-price" class="product-text-header bold">£{{ product.price }}</div>
+                                                {% endfor %}
+                                            </div>
+                                            <div class="col-4 my-auto py-auto">
+                                                <a class="delete-button border-solid masthead-button btn btn-primary js-scroll-trigger" href="">
+                                                        <i class="fas fa-trash-alt" aria-hidden="true"></i> delete</a>
+                                            </div>
                                     {% endfor %}
-                                {% endif %}
-                                {% if selected == "selected-two" %}
-                                    {% for option in options %}
-                                        <div class="text-blue product-text-two mb-2">{{ option.option2.title }}</div>
-                                    {% endfor %}
-                                {% endif %}
-                                {% if selected == "selected-three" %}
-                                    {% for option in options %}
-                                        <div class="text-blue product-text-two mb-2">{{ option.option3.title }}</div>
-                                    {% endfor %}
-                                {% endif %}
-                                <div class="text-blue text-xs mb-2">Number of servings ...</div>
-                                <div id="servings" class="text-blue product-text-two mb-2 bold">{{ servings }}</div>
-                                <div class="row">
-                                    <div class="col-4 my-auto">
-                                        {% for product in products %}
-                                            <div class="text-blue text-xs">per serving</div>
-                                            <div id="serving-price" class="product-text-two mt-1">£{{ product.price }}</div>
-                                        {% endfor %}
-                                    </div>
-                                    <div class="col-4 my-auto">
-                                        {% for product in products %}
-                                            <div class="text-blue text-xs">Total price</div>
-                                            <div id="total-price" class="product-text-header bold">£{{ product.price }}</div>
-                                        {% endfor %}
-                                    </div>
-                                    <div class="col-4 my-auto py-auto">
-                                        <a class="delete-button border-solid masthead-button btn btn-primary js-scroll-trigger" href="">
-                                                <i class="fas fa-trash-alt" aria-hidden="true"></i> delete</a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
