--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -97,17 +97,13 @@
                                                 {% for product in products %}
                                                     {% if product.name == basket.name %}
                                                         <div class="text-blue text-xs">per serving</div>
-                                                        <div id="serving-price" class="product-text-two mt-1">£{{ product.price }}</div>
+                                                        <div class="product-text-two mt-1">£{{ product.price }}</div>
                                                     {% endif %}
                                                 {% endfor %}
                                             </div>
                                             <div class="col-4 my-auto">
-                                                {% for product in products %}
-                                                    {% if product.name == basket.name %}
-                                                        <div class="text-blue text-xs">Total price</div>
-                                                        <div id="total-price" class="product-text-header bold">£{{ product.price }}</div>
-                                                    {% endif %}
-                                                {% endfor %}
+                                                <div class="text-blue text-xs">Total price</div>
+                                                <div class="product-text-header bold">£{{ basket.total_price }}</div>
                                             </div>
                                             <div class="col-4 my-auto py-auto">
                                                 <a class="delete-button border-solid masthead-button btn btn-primary js-scroll-trigger" href="">
